# svg-trmnl-server

./: .gitignore  Cargo.toml  index.html  trmnl-server.yaml
config/: config.example.toml  config.toml
src/: main.rs
src/api/: display.rs  mod.rs  setup.rs
src/api/display/: mod.rs
src/api/display/preview/: icons.html.jinja  index.html  mod.rs
src/context/: mod.rs
src/context/weather/: mod.rs  sample_forecast.json
src/display/: icons.json  mod.rs
src/dto/: api_display_response.rs  api_setup_response.rs  mod.rs  special_function.rs
templates/: base.svg.jinja  components.svg.jinja  four-col-base.svg.jinja  test.svg.jinja  weather.svg.jinja
