[package]
name = "trmnl-server-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
resvg = "0.45.1"
tiny-skia = "0.11.4"
serde = { version = "1.0", features = ["derive"] }
minijinja = "2.9.0"
notify = "8.0.0"
anyhow = "1.0.98"
axum = { version ="0.8.3", features = ["default", "macros"] }
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tower-http = { version = "0.6.2", features = ["trace"] }
uuid = { version = "1.16.0", features = ["v4"] }
tracing = "0.1.41"
tower = "0.5.2"
tinybmp = "0.6.0"
embedded-graphics = "0.8.1"